--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Agora Video Web SDK Quickstart</title>
+    <title>Agora RTC RTM DEMO</title>
     <!--
     This line is used to refer to the bundle.js file packaged by webpack. A sample webpack configuration is shown in the later step of running your app.
     -->
     <script src="jquery.min.js"></script>
-    <script src="./dist/bundle.js"></script>
+    <script src="./bundle.js"></script>
 
 </head>
 <body>
-<h2 class="left-align">Agora Video Web SDK Quickstart</h2>
 <div class="row">
+    <div>
+        <table>
+            <tr><td>appid:</td><td id="appId"></td><td>channel_name:</td><td id="channel_name"></td></tr>
+        </table>
+    </div>
+</div>
+<div class="row">
+    <div><h2 class="left-align">RTC video</h2></div>
     <div>
         <button type="button" id="join">JOIN</button>
         <button type="button" id="leave">LEAVE</button>
@@ -25,8 +32,8 @@
 </div>
 
 
-================================================================================================<br/>
-
+<div class="row">
+<div><h2 class="left-align">RTM 云信令</h2></div>
 <form id="loginForm">
     <div class="col" style="min-width: 433px; max-width: 443px">
         <div class="card" style="margin-top: 0px; margin-bottom: 0px;">
@@ -70,8 +77,7 @@
 
     <div id="log"></div>
 </form>
-
-=========================================================================================<br/>
+</div>
 
 
 
